--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,18 @@ spring.data.rest.base-max-page-size=20
 
 springdoc.version=1.0.0
 springdoc.swagger-ui.path=/swagger-ui-custom.html
+
+
+management.metrics.web.server.request.autotime.enabled=true
+#management.metrics.export.influx.db=boot
+#management.metrics.export.influx.userName=user
+#management.metrics.export.influx.password=pass
+#management.metrics.export.influx.uri=http://localhost:8086
+#management.metrics.export.influx.step=15s
+#management.metrics.export.influx.autoCreateDb=false
+
+management.metrics.export.statsd.host=localhost
+management.metrics.export.statsd.port=8125
+management.metrics.export.statsd.enabled=true
+management.metrics.export.statsd.flavor=telegraf
+management.metrics.export.statsd.polling-frequency=1s
