--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,5 @@ management.metrics.export.statsd.port=8125
 management.metrics.export.statsd.enabled=true
 management.metrics.export.statsd.flavor=telegraf
 management.metrics.export.statsd.polling-frequency=1s
+
+logging.file.name=application.log
