feat: regex all type of logs logtash

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -7,17 +7,40 @@ input {
   }
 }
 
-
 filter {
-  #If log line contains tab character followed by 'at' then we will tag that entry as stacktrace
+
+  
   if [message] =~ "\tat" {
     grok {
-      match => ["message", "^(\tat)"]
+      match => ["message", "(?<timestamp>%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}) %{LOGLEVEL:level} %{NUMBER:pid} --- \[%{GREEDYDATA:thread}\] %{GREEDYDATA:class}: %{GREEDYDATA:exception}%{SPACE}(?<stacktrace>(.|\r|\n)*)"]
       add_tag => ["stacktrace"]
     }
+  } else {
+    grok {
+      match => [ "message",
+                "(?<timestamp>%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME})  %{LOGLEVEL:level} %{NUMBER:pid} --- .+? :\s+(?<logmessage>.*)"
+              ]
+    }
+
+  } 
+  
+  date {
+    match => [ "timestamp" , "yyyy-MM-dd HH:mm:ss.SSS" ]
   }
- 
+  
+  
 }
+
+# filter {
+#   #If log line contains tab character followed by 'at' then we will tag that entry as stacktrace
+#   if [message] =~ "\tat" {
+#     grok {
+#       match => ["message", "^(\tat)"]
+#       add_tag => ["stacktrace"]
+#     }
+#   }
+ 
+# }
 
 
 output {    
