--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,4 @@ management.metrics.export.statsd.flavor=telegraf
 management.metrics.export.statsd.polling-frequency=1s
 
 logging.file.name=application.log
+logging.logstash.logHeaders=true
