--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.6.4</version>
         </dependency>
-
+<!-- 
         <dependency>
             <groupId>com.github.piomin</groupId>
             <artifactId>logstash-logging-spring-boot-starter</artifactId>
             <version>1.3.0.RELEASE</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>com.h2database</groupId>
