feat: Add config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,24 @@ management.metrics.web.server.request.autotime.enabled=true
 #management.metrics.export.influx.step=15s
 #management.metrics.export.influx.autoCreateDb=false
 
-management.metrics.export.statsd.host=localhost
-management.metrics.export.statsd.port=8125
-management.metrics.export.statsd.enabled=true
-management.metrics.export.statsd.flavor=telegraf
-management.metrics.export.statsd.polling-frequency=1s
+# management.metrics.export.statsd.host=localhost
+# management.metrics.export.statsd.port=8125
+# management.metrics.export.statsd.enabled=true
+# management.metrics.export.statsd.flavor=telegraf
+# management.metrics.export.statsd.polling-frequency=1s
+
+management.metrics.export.datadog.api-key=d8a346f1c9f6007884c115098d518094
+management.metrics.export.datadog.enabled=true
+management.metrics.export.datadog.step=1s
 
 logging.file.name=application.log
 # logging.logstash.logHeaders=true
+
+
+opentracing.jaeger.udp-sender.host=jaeger
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.enabled=true
+opentracing.jaeger.service-name=prueba01
+
+opentracing.jaeger.expand-exception-logs=true
+spring.application.name=prueba
