--- a/dev-docker-compose.yml
+++ b/dev-docker-compose.yml
@@ -39,13 +39,30 @@ services:
     image: docker.elastic.co/beats/filebeat:7.11.1
     container_name: filebeat
     hostname: filebeat
-    volumes: 
+    volumes:
       - ./config/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
       - ./application.log:/home/spring-boot-h2-crud/application.log
     links:
       - elasticsearch:elasticsearch
     depends_on:
       - elasticsearch
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    hostname: jaeger
+    ports:
+      - "5775:5775/udp"
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "14268:14268"
+      - "9411:9411"
+    environment:
+      SPAN_STORAGE_TYPE: "elasticsearch"
+      ES_SERVER_URLS: "http://elasticsearch:9200"
+      ES_TAGS_AS_FIELDS_ALL: "true"
 
   api:
     build:
@@ -54,11 +71,15 @@ services:
     volumes:
       - ~/.m2:/root/.m2
       - ./:/home/spring-boot-h2-crud
-      #- ./config/filebeat/filebeat.yml:/etc/filebeat/filebeat.yml
     command: mvn spring-boot:run -DskipTests
     ports:
-      - "8088:8088"   
+      - "8088:8088"
     links:
       - filebeat:filebeat
     depends_on:
       - filebeat
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
