--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <description>Demo project for spring-boot-crud using JPA</description>
 
     <properties>
-        <java.version>1.11</java.version>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -36,21 +36,34 @@
 
         <dependency>
             <groupId>io.micrometer</groupId>
-            <artifactId>micrometer-registry-statsd</artifactId>
-            <version>1.6.4</version>
+            <artifactId>micrometer-registry-datadog</artifactId>
+            <version>${micrometer.version}</version>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-statsd</artifactId>
+            <version>1.6.4</version>
+        </dependency> -->
+
+        <!-- <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.6.4</version>
-        </dependency>
-<!-- 
+        </dependency> -->
+        <!-- 
         <dependency>
             <groupId>com.github.piomin</groupId>
             <artifactId>logstash-logging-spring-boot-starter</artifactId>
             <version>1.3.0.RELEASE</version>
         </dependency> -->
+
+        <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.h2database</groupId>
